fix(code): too much padding

--- a/apps/client/src/widgets/type_widgets/code/code.css
+++ b/apps/client/src/widgets/type_widgets/code/code.css
@@ -14,6 +14,7 @@
 .note-detail-code-editor {
     min-height: 50px;
     height: 100%;
+    padding: 0 !important;
 }
 /* #endregion */
 
